<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>it.tidalwave.superpom</groupId>
        <artifactId>superpom</artifactId>
        <version>4.14</version>
        <relativePath />
    </parent>

    <groupId>it.tidalwave.northernwind</groupId>
    <artifactId>northernwind</artifactId>
    <version>1.2-ALPHA-3</version>
    <packaging>pom</packaging>
    <name>NorthernWind</name>
    <inceptionYear>2011</inceptionYear>
    <description>
        NorthernWind is a lightweight CMS that uses a plain filesystem as its storage. It provides versioning by means of
        a distributed SCM such as Git or Mercurial.

        Please see the project website for more information: http://northernwind.tidalwave.it

        A few examples of websites running on NorthernWind:

        * http://stoppingdown.net
        * http://northernwind.tidalwave.it
        * http://tidalwave.it
    </description>

    <properties>
        <scm.repo.url>ssh://git@bitbucket.org/tidalwave/northernwind-src.git</scm.repo.url>
        <scm.repo.readonly.url>https://bitbucket.org/tidalwave/northernwind-src.git</scm.repo.readonly.url>
        <scm.repo.browse.url>https://bitbucket.org/tidalwave/northernwind-src/src</scm.repo.browse.url>

        <tft.project.url>http://northernwind.tidalwave.it</tft.project.url>

        <tft.maven.requiredJdk>[11,12)</tft.maven.requiredJdk>
        <tft.javac.source>1.8</tft.javac.source>
        <tft.javac.target>1.8</tft.javac.target>

        <netbeans.hint.jdkPlatform>JDK_11.0.10</netbeans.hint.jdkPlatform>
        <netbeans.hint.license>Tidalwave-ASF</netbeans.hint.license>
        <netbeans.compile.on.save>all</netbeans.compile.on.save>

        <tidalwave.ci.view>NorthernWind</tidalwave.ci.view>
        <tidalwave.issues>NW</tidalwave.issues>

        <tft.test.maxMemory>1024M</tft.test.maxMemory>

        <main.webapp.contextPath>/nw</main.webapp.contextPath>
        <main.webapp.url>http://localhost:8080${main.webapp.contextPath}</main.webapp.url>
        <log.file>target/nw.log</log.file>

        <tft.clirr.skip>true</tft.clirr.skip> <!-- Clirr is not compatible with JDK 8 -->

        <tft.jaxb2-maven-plugin.version>1.3</tft.jaxb2-maven-plugin.version> <!-- latest breaks the build -->
        <tft.maven-pmd-plugin.version>3.7</tft.maven-pmd-plugin.version> <!-- latest breaks the build -->
    </properties>

    <!-- Repeated because of http://jira.codehaus.org/browse/SCM-442 -->
    <scm>
        <connection>scm:git:${scm.repo.readonly.url}</connection>
        <developerConnection>scm:git:${scm.repo.effective.url}</developerConnection>
        <url>${scm.repo.browse.url}</url>
        <tag>1.2-ALPHA-3</tag>
    </scm>

    <repositories>
        <!-- Until we depend on the NetBeans Platform FileSystem -->
        <repository>
            <id>netbeans</id>
            <name>NetBeans Platform Maven Repository</name>
            <url>http://bits.netbeans.org/maven2/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-html-patches</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-common-tests</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core</artifactId>
                <classifier>tests</classifier>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-default</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-default</artifactId>
                <version>1.2-ALPHA-3</version>
                <classifier>tests</classifier>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-marshalling-default</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-filesystem-basic</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-filesystem-scm</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-filesystem-scm</artifactId>
                <version>1.2-ALPHA-3</version>
                <classifier>tests</classifier>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-filesystem-hg</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-filesystem-git</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-core-profiling</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-components</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-components</artifactId>
                <version>1.2-ALPHA-3</version>
                <classifier>tests</classifier>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-components-htmltemplate</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-commons</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-media</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-webapp-commons</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-springmvc</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-media-springmvc</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-springmvc-webapp</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
            <dependency>
                <groupId>it.tidalwave.northernwind</groupId>
                <artifactId>it-tidalwave-northernwind-frontend-media-springmvc-webapp</artifactId>
                <version>1.2-ALPHA-3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <configuration>
                    <excludes combine.children="append">
                        <exclude>**/main/resources/**/*.txt</exclude>
                        <exclude>**/src/test/resources/**/*.xhtml</exclude>
                        <exclude>**/src/test/resources/expected-results/**/*</exclude>
                        <exclude>modules/HtmlPatches/src/main/java/*.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- TODO: push up -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>8</source>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>installers</id>
        </profile>
        <profile>
            <id>it-tidalwave-test-report-v1</id>
            <properties>
                <!-- FIXME: workaround to disable some plugin that breaks site plugin - See NW-328.-->
                <test.report>true</test.report>
            </properties>
        </profile>
    </profiles>

    <modules>
        <module>modules</module>
    </modules>
</project>
